<resources>
    <string name="app_name">Bild</string>
    <string name="hint_userid">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout1">LOGOUT</string>
    <string name="btn_logout">BACK</string>
    <string name="name">Fullname</string>
    <string name="action_settings">Setting</string>
    <string name="btn_cohort">Cohorts</string>
    <string name="btn_trainees">Trainees</string>
    <string name="btn_data_entry_status">Data Entry Status</string>
    <string name="btn_training_status">Training Status</string>
    <string name="lbl_name1">Church Based Theological Education</string>
    <string name="lbl_name2">Database</string>
    <string name="title_activity_cohorts">Cohorts</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_trainees">Trainees</string>
    <string name="title_activity_data_entry_status">DataEntryStatus</string>
    <string name="title_activity_training_status">TrainingStatus</string>
    <string name="btn_enter_trainees_details">Enter Trainees Details</string>
    <string name="btn_edit_trainees_details">Edit Trainees Details</string>
    <string name="btn_trainees_list">Trainees List</string>
    <string name="title_activity_enter_edit_trainees_details">EnterEditTraineesDetails</string>
    <string name="title_activity_trainees_list">TraineesList</string>
    <string name="title_activity_general_details">General Details</string>
    <string name="title_activity_training_details">Training Details</string>
    <string name="title_activity_assessment_info_1">Assessment Info 1</string>
    <string name="title_activity_assessment_info_2">Assessment Info 2</string>
    <string name="title_activity_official_details">Official Details</string>
    <string name="title_activity_additional_info">Additional Info</string>
    <string name="title_activity_testimony">Testimony</string>
    <string name="title_activity_family_details">Family Details</string>
    <string name="lbl1">Agape Institute Of Leadership Development and BILD</string>
    <string name="btn_general_details">General Details</string>
    <string name="btn_training_details">Training Details</string>
    <string name="btn_assessment_info_1">Assessment Info 1</string>
    <string name="btn_assessment_info_2">Assessment Info 2</string>
    <string name="btn_official_details">Official Details</string>
    <string name="btn_additional_information">Additional Info</string>
    <string name="btn_testimony">Testimony</string>
    <string name="btn_family_details">Family Details</string>
    <string name="current_cohort_name">Current Cohort Name: </string>
    <string name="cohort_leader">Cohort Leader: </string>
    <string name="associate_faculty">Associate Faculty: </string>
    <string name="cohort_location">Cohort Location: </string>
    <string name="current_cohort_id">Current Cohort Id: </string>
    <string name="certified_leader">Certified Leader: </string>
    <string name="volunteer_id">Volunteer Id: </string>
    <string name="title">Title: </string>
    <string name="full_name">Full Name: </string>
    <string-array name="mission">
        <item>I.P.C</item>
        <item>Operation Agape</item>
        <item>Gilgal Mission Church</item>
        <item>Shin International</item>
        <item>Eternal life Church</item>
        <item>Penticost</item>
        <item>Arnest Evangiliz Church</item>
        <item>Athmik Marih</item>
        <item>CATHELICATE</item>
        <item>Penticost Belivers church</item>
        <item>Bersheba</item>
        <item>Sathsangath fellowship</item>
        <item>Milan Fellowship church</item>
        <item>Grace Of God</item>
        <item>CSI</item>
        <item>AG</item>
        <item>Kings Way Revival Church</item>
        <item>Jeevan Joythi Ministries</item>
        <item>Victory Church Of India</item>
        <item>JJM</item>
        <item>Bethel  Gospel Fellowship</item>
        <item>Appostholic Assembly</item>
        <item>Christ\'s Church</item>
        <item>Bible Beliver\'s Church</item>
        <item>Calvary Temple</item>
        <item>Grace Bible College</item>
        <item>OA</item>

    </string-array>
    <string-array name="church">
        <item>K.T.M.</item>
        <item>I. M.S.</item>
        <item>Khanapur</item>
        <item>Rewa Church</item>
        <item>K.T.F.</item>
        <item>O.A.</item>
        <item>JMCT</item>
        <item>Yeshu Darbar</item>
        <item>Jaiwant Development Society</item>
        <item>I.M.S.</item>
        <item>Kachhwa Christian Church</item>
        <item>Graece Prayer Fellowship</item>
        <item>K.T. M.</item>
        <item>I.P.C</item>
        <item>A.G Church</item>
        <item>C.N.I Ludhiana</item>
        <item>Methodist church</item>
        <item>Agape Christian Aseembly</item>
        <item>OA</item>
        <item>HOPE IN JESUS APOSTOLIC CHURCH OF CHRIST, TRIVANDRUM</item>
        <item>VASAI BAPTIST CHURCH</item>
        <item>DISCIPLE CHURCH OF INDIA</item>
        <item>AGAPE PANIPAT ASSEMBLY CHURCH</item>
        <item>Medhapali House Church</item>
        <item>Assemblies Of God</item>
        <item>Global Harvest Church</item>
        <item>Apostolic Faith Church</item>
        <item>Calvary Temple Fellowship</item>
        <item>India Gospel Church</item>

    </string-array>
    <string-array name="designation">
        <item>Evangelist</item>
        <item>Master Trainer</item>
        <item>Pastor</item>
        <item>Binu_Alexander</item>
        <item>O.A Staff</item>
        <item>Other</item>
        <item>Jobin_Cherian</item>
        <item>Team Leader</item>
        <item>Josen_Chacko</item>
        <item>Nitika_Daniel</item>


    </string-array>
    <string name="fathers_name">Father Name: </string>
    <string name="dob">Date Of Birth: </string>
    <string name="age">Age: </string>
    <string name="gender">Gender: </string>
    <string name="email_id">Email Id: </string>
    <string name="home_phone">Home Phone: </string>
    <string name="mobile_phone">Mobile Phone: </string>
    <string name="present_address">Present Address: </string>
    <string name="state">State: </string>
    <string name="district">District: </string>
    <string name="block">Block: </string>
    <string name="village">Village: </string>
    <string name="pin">Pin: </string>
    <string name="country">Country: </string>
    <string name="permanent_address">Permanent Address: </string>
    <string name="personal_identification">Personal Identification: </string>
    <string name="rd_btn_male">Male</string>
    <string name="rd_btn_female">Female</string>
    <string name="bild_course_enrolledin">Bild Course Enrolled in: </string>
    <string name="antioch_school_course_enrolledin">Antioch School Course Enrolled in: </string>
    <string name="chkbox_b_minus_bius">B Minus BIUS</string>
    <string name="chkbox_b_minus_antioch_school">B Minus Antioch School</string>
    <string name="chkbox_m_minus_antioch_school">M Minus Antioch School</string>
    <string name="chkbox_d_minus_antioch_school">D Minus Antioch School</string>
    <string name="title_training_progress_record">Training Progress Record:</string>
    <string name="course">Course</string>
    <string name="modules">Modules</string>
    <string name="books_complete">Books Complete</string>
    <string name="lesson_complete">Lesson Complete</string>
    <string name="cohort_id">Cohort Id</string>
    <string name="eportfolio_username">ePortfolio Username</string>
    <string name="eportfolio_password">ePortfolio Password</string>
    <string name="certification_status">Certification Status</string>
    <string name="rd_btn_certified">Certified</string>
    <string name="not_certified">Not Certified</string>
    <string name="date_of_enrollment">Date of enrollment</string>
    <string name="date_of_assessment">Date of assessment</string>
    <string name="date_of_certification">Date of certification</string>
    <string name="report_first_principles">Report: First Principles</string>
    <string name="book">book</string>
    <string name="lesson">Lesson</string>
    <string name="projects_done">Projects done</string>
    <string name="rd_btn_yes">Yes</string>
    <string name="rd_btn_no">No</string>
    <string name="oral_review">Oral review</string>
    <string name="assessment_done">Assessment done</string>
    <string name="report_leadership_series">Report: Leadership Series</string>
    <string name="report_teaching_practicum_first_principle_1">Report: Teaching Practicum: First Principle 1</string>
    <string name="center_of_training">Center of Training: </string>
    <string name="no_of_book_finished">Number of Books Finished</string>
    <string name="no_of_students">Number of Students</string>
    <string name="were_they_certified">Were they Certified?</string>
    <string name="what_did_they_learn">What did they Learn?</string>
    <string name="what_did_learn_from_teaching_fp">What did learn from teaching FP?</string>
    <string name="personal_development_assessment">Personal Development Assessment:</string>
    <string name="attachments">Attachments:</string>
    <string name="testimony_from_a_participant_of_teaching_practicum">Testimony from a participant\nof Teaching Practicum:</string>
    <string name="testmony_from_an_ObserverTrainer_of_teaching_practicum">Testmony from an Observer\nor Trainer of Teaching Practicum</string>
    <string name="students_competency_assessments">Students Competency \n Assessments</string>
    <string name="assessment">Assessment</string>
    <string name="complete">Complete</string>
    <string name="date1">Date 1</string>
    <string name="date2">Date 2</string>
    <string name="date3">Date 3</string>
    <string name="personal_development_plan">Personal Development Plan</string>
    <string name="life_to_the_end">Life to the End</string>
    <string name="attachment_checklist">Attachment Checklist:</string>
    <string name="certificate">Certificate</string>
    <string name="testimony">Testimony</string>
    <string name="family_photo">Family Photo</string>
    <string name="spouse_photo">Spouse\'s  Photo</string>
    <string name="children_photo">Children\'s Photo</string>
    <string name="present_status">Present Status:</string>
    <string name="rd_btn_active">Active</string>
    <string name="rd_btn_left">Left</string>
    <string name="rd_btn_resigned">Resigned</string>
    <string name="rd_btn_terminated">Terminated</string>
    <string name="rd_btn_expired">Expired</string>
    <string name="rd_btn_other">Other</string>
    <string name="ministry_role">Ministry Role</string>
    <string name="trainer">Trainer</string>
    <string name="trainee">Trainee</string>
    <string name="church_plante">Church Plante</string>
    <string name="office_staff">Office Staff</string>
    <string name="mbb">MBB</string>
    <string name="supervisor">Supervisor</string>
    <string name="social_worker">Social Worker</string>
    <string name="others">Others</string>
    <string name="support">Support:</string>
    <string name="rd_btn_unsupported">Unsupported</string>
    <string name="rd_btn_supported">Supported</string>
    <string name="supported_by">Supported By:</string>
    <string name="team_leader">Team Leader:</string>
    <string name="language_proficiency">Language Proficiency:</string>
    <string name="language">Language</string>
    <string name="martial_details">Martial Details:</string>
    <string name="current_status">Current Status</string>
    <string name="chkbox_single">Single</string>
    <string name="chkbox_married">Married</string>
    <string name="date_of_marriage">Date of Marriage</string>
    <string name="spouse_name">Spouse\'s Name</string>
</resources>