<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="${relativePackage}.${activityClass}" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView" />

        <TextView
            android:id="@+id/userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_name1"
        android:textSize="20dp"
            android:gravity="center"
        android:id="@+id/textView1"
        android:layout_below="@+id/name1"
        android:layout_centerHorizontal="true" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_name2"
        android:textSize="20dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

        <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/lbl_name"
        android:textSize="24dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
        android:id="@+id/btnCohort"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_cohort"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:onClick="cohorts" />

        <Button
        android:id="@+id/btnTrainees"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_trainees"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_below="@+id/btnCohort"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="trainees" />

        <Button
        android:id="@+id/btnData_entry_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_data_entry_status"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_below="@+id/btnTrainees"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="data_entry_status" />

        <Button
        android:id="@+id/btnTraining_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_training_status"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_below="@+id/btnData_entry_status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="training_status" />

    </LinearLayout>


    <Button
    android:id="@+id/btnLogout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/btn_logut_bg"
    android:text="@string/btn_logout1"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="15dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:onClick="logout" />

</RelativeLayout>