<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login">

    <Button
        android:id="@+id/btnFamily_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_family_details"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/horizontalScrollView10"
        android:layout_below="@+id/btnFamily_details"
        android:fillViewport="true"
        android:focusable="true"
        android:layout_above="@+id/btnLogout">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView15"
            android:layout_below="@+id/btnFamily_details"
            android:fillViewport="true"
            android:focusable="true"
            android:layout_above="@+id/btnLogout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="415dp"
                android:layout_above="@+id/btnLogout"
                android:layout_below="@+id/btnFamily_details">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_login2"
        android:layout_marginBottom="3dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/martial_details"
                android:id="@+id/textViewFamily_details"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"
                android:textSize="19dp"
                android:layout_marginBottom="5dp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="middle"
        android:layout_marginBottom="3dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/current_status"
                android:id="@+id/textView5"
                android:layout_column="0"
                android:textColor="@color/white" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkbox_single"
                    android:id="@+id/checkBoxSingle" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chkbox_married"
                    android:id="@+id/checkBoxMarried" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date_of_marriage"
                android:id="@+id/textViewDate_of_marriage"
                android:layout_column="0"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:padding="2dp"
                android:singleLine="true"
                android:id="@+id/editText45"
                android:layout_column="1" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/spouse_name"
                android:id="@+id/textViewSpouse_name"
                android:layout_column="0"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:padding="2dp"
                android:singleLine="true"
                android:id="@+id/editText46"
                android:layout_column="1" />
        </TableRow>

    </TableLayout>
            </LinearLayout>
        </ScrollView>
    </HorizontalScrollView>
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="back" />
</RelativeLayout>