<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login">

    <Button
        android:id="@+id/btnTestimony"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_testimony"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/horizontalScrollView9"
        android:layout_below="@+id/btnTestimony"
        android:fillViewport="true"
        android:focusable="true"
        android:layout_above="@+id/btnLogout">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView14"
            android:layout_below="@+id/btnTestimony"
            android:fillViewport="true"
            android:focusable="true"
            android:layout_above="@+id/btnLogout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="415dp"
                android:layout_above="@+id/btnLogout"
                android:layout_below="@+id/btnTestimony">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_login2"
        android:layout_marginBottom="3dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/testimony"
                android:id="@+id/textViewTtleTestimony"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"
                android:textSize="19dp"
                android:layout_marginBottom="5dp" />
        </TableRow>
    </TableLayout>

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_login"
                    android:layout_marginBottom="3dp" >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            android:singleLine="true"
            android:id="@+id/editText44"
            android:layout_column="1"
            android:layout_weight="0.81"
            android:inputType="textMultiLine" />

        </TableRow>
    </TableLayout>

</LinearLayout>
    </ScrollView>
    </HorizontalScrollView>
<Button
android:id="@+id/btnLogout"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@color/btn_logut_bg"
android:text="@string/btn_logout"
android:textAllCaps="false"
android:textColor="@color/white"
android:textSize="15dp"
android:layout_alignParentBottom="true"
android:layout_alignParentLeft="true"
android:layout_alignParentStart="true"
android:onClick="back" />
    </RelativeLayout>